--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,6 +1,5 @@
 @import url(http://fonts.googleapis.com/css?family=Signika:600,700);
 @import url(http://fonts.googleapis.com/css?family=Lora:700);
-@import "compass/utilities";
 
 // Fonts: Lato Bold (h1-h3), Lato Regular (header p), Lato Light (content p),  
 
@@ -13,401 +12,217 @@
 	}
 }
 
-// What variables look like
-// $logo-height: 150;
-// height: ($logo-height + 50) + px;
-// margin-top: -($logo-height / 2) + px;
-// $font-primary-sans-serif: "Signika", Helvetica, Arial, sans-serif;
+// Vars
+$vpadding: 100;
+$hpadding: 100;
+$fontsizeL: 48;
+$fontsizeM: 32;
+$fontsizeS: 24;
+$fontsizeP: 16;
 
 // base styles
 
-$dark-gray: #3c3c3c;
+$darkgray: #3c3c3c;
 $white: #fff;
 
-/* required for parallax */
-html, body {
-	width: 100%;
-	height: 100%;
-}
+$font-bold: "Signika", Helvetica, Arial, sans-serif;
+$font-regular: "Signika", Helvetica, Arial, sans-serif;
+$font-light: "Signika", Helvetica, Arial, sans-serif;
 
-.slide {
-	position:relative;
-	width: 100%;
-	height: 100%;
-	background-attachment: fixed;
-}
-
-$font-primary-sans-serif: "Signika", Helvetica, Arial, sans-serif;
-
-html {
-	-webkit-font-smoothing: antialiased;
+.animate{
+	-webkit-transition: -webkit-transform 0.4s ease, color 0.4s ease, background-color 0.4s ease, height 0.4s ease;
+	-moz-transition: -moz-transform 0.4s ease, color 0.4s ease, background-color 0.4s ease, height 0.4s ease;
+	-o-transition: -o-transform 0.4s ease, color 0.4s ease, background-color 0.4s ease, height 0.4s ease;
+	transition: transform 0.4s ease, color 0.4s ease, background-color 0.4s ease, height 0.4s ease;
 }
 
 body {
-	font-family: $font-primary-sans-serif;
-	font-size: 16px;
-	font-weight: 400;
+	color: $darkgray;
 	line-height: 1.5;
 }
 
-h1{
-	font-family: "Signika", Helvetica, sans-serif; 
-	font-weight: 600; 
-	font-size: 25px;
-	color: #614f46;
+section{
+	width: 100%; 
+	margin: 0 auto;
+	padding: $vpadding 0; 
+}
 
+h1{
+	font-family: $font-bold;
+	font-size: ($fontsizeL) + px;
+	padding-bottom: 50px; 
+	text-transform: uppercase;
 }
 
 h2{
-	font-family: "Lora", serif; 
-	font-weight: 700; 
-	font-size: 18px;
-	color: #FFF;
-	letter-spacing: 1px;
+	font-family: $font-bold;
+	font-size: ($fontsizeM) + px;
+	margin-top: (-$fontsizeM / 2) + px; 
+	text-transform: uppercase;
+}
+
+h3{
+	font-family: $font-bold;
+	font-size: ($fontsizeS) + px;
+	padding-bottom: 20px; 
+	text-transform: uppercase;
 }
 
 p{
-	font-family:Georgia, "Times New Roman", Times, serif;
-	color: #614f46;
-	font-size: 20px;
+	font-family: $font-light;
+	font-size: ($fontsizeP) + px;
+	padding-bottom: 20px; 
+}
+
+button{
+	font-family: $font-bold;
+	font-size: ($fontsizeP) + px;
+	padding: 20px; 
+	text-transform: uppercase;
+	background-color: $darkgray;
+	color: $white; 
 }
 
 form{
 
-	p{
-		font-family: "Signika", Helvetica, serif; 
-		font-weight: 600; 
-		font-size: 15px;
-		color: #614f46;  
+	font-family: $font-light;
+	font-size: ($fontsizeP) + px;
+	padding-bottom: 20px;
+
+	input{
+		border: none;
+	}
+
+	textarea{
+		border: none;
 	}
 }
 
-input{
-	background-color: #FFF;
-	-moz-border-radius: 9px;
-	-webkit-border-radius: 9px;
-	-ms-border-radius: 9px;
-	border-radius: 9px;
-	border: 2px solid #bbdcd1;
-	height: 30px;
-	width: 200px;
-	font-family:Georgia, "Times New Roman", Times, serif;
-	color: #614f46;
-	font-size: 20px;
-	padding-left: 10px;
-	margin-bottom: 15px;
-	margin-right: 15px;
+.container{
+	width: 100%; 
 }
 
-.container {
-	width: 100%;
-	min-width: 900px;
+.content{
+	border: 1px solid $darkgray;
+	width: 60%; 
+	margin: 0 auto; 
+    padding: 15px;
+    -webkit-border-image: url(images/content-border.jpg) 30 stretch; /* Safari 3.1-5 */
+    -o-border-image: url(images/content-border.jpg) 30 stretch; /* Opera 11-12.1 */
+    border-image: url(images/content-border.jpg) 30 stretch;
+}
+
+.imgbg{
 
 }
 
-#slide1{
-	background-image: url(../images/bg1.jpg);
-	background-size: 100%;
-	background-repeat: no-repeat;
-	background-position: top left;
-	@include clearfix;
-
-	span{
-			font-size: 12px;
-		}
-
-	.thankyou{
-		position: absolute;
-		width:310px;
-		top: 80px;
-		left:50%;
-		margin-left:-155px;
-		text-align: center;
-		background-color: #FFF;
-		-moz-border-radius: 9px;
-		-webkit-border-radius: 9px;
-		-ms-border-radius: 9px;
-		border-radius: 9px;
-		border: 5px solid #FFF;
-
-	}
-
-	.ribbon{
-		@include clearfix;
-		margin-top: 300px;
-		margin-bottom: 300px;
-		padding-top: 80px;
-		width: 100%;
-		background-color: #f8b7c1;
-		border-top: 2px solid #614f46;
-		border-bottom: 2px solid #614f46;
-		height: 130px;
-
-		.presents{
-			float: left;
-			margin-left: 10%;
-			width: 40%;
-			text-align: left;
-		}
-
-		.by{
-			float: right;
-			margin-right: 9%;
-			width: 39%;
-			text-align: right;
-			padding-left: 2%;
-		}
-	}
-
-	.logo{
-		position: absolute;
-		width:376px;
-		top: 190px;
-		left:50%;
-		margin-left:-188px;
-
-	}
-
-	.banner{
-		position: absolute;
-		width:600px;
-		height: 140px;
-		bottom: 60px;
-		left:50%;
-		margin-left:-300px;
-		background-image: url(../images/banner.png);
-		background-repeat: no-repeat;
-		background-position: top center;
-		text-align: center;
-		padding-top:70px;
-		padding-bottom:60px;
-	}
+.whitebg{
+	
 }
 
-#slide2{
-	background-color: #c7e6e1;
-	padding-top:40px;
-	padding-bottom:40px;
-	@include clearfix;
-
-	.icon{
-		float: left;
-		margin-left: 7%;
-		padding-top:2%;
-		height: 250px;
-		width: 20%;
-		background-image: url(../images/sweet.png);
-		background-repeat: no-repeat;
-		background-size: contain;
-		background-position: center center;
-	}
-
-	.synopsis{
-		float: right;
-		margin-right: 7%;
-		border-left: 2px dotted #614f46;
-		padding-left: 7%;
-		padding-top: 6%;
-		width: 55%;
-		height: 250px;
-	}
+.header{
+	background-image: url(images/headerbg.jpg);
 }
 
-#slide3{
-	background-image: url(../images/bg2.jpg);
-	background-repeat: repeat;
-	background-position:top;
-	padding-top:60px;
-	padding-bottom:5px;
-	@include clearfix;
-
-	.left{
-		float: left;
-		margin-left: 10%;
-		margin-right: 3%;
-		width: 35%;
-
-	}
-
-	.right{
-		float: right;
-		margin-left: 3%;
-		margin-right: 10%;
-		width: 35%;
-	}
-
-	.quotebox{
-		background-color: #FFF;
-		-moz-border-radius: 9px;
-		-webkit-border-radius: 9px;
-		-ms-border-radius: 9px;
-		border-radius: 9px;
-		border: 5px solid #FFF;
-		width: 100%;
-		text-align: center;
-		margin-bottom: 55px;
-
-		.border{
-			-moz-border-radius: 9px;
-			-webkit-border-radius: 9px;
-			-ms-border-radius: 9px;
-			border-radius: 9px;
-			border: 2px dotted #614f46;
-			padding-bottom: 15px;
-			padding-top: 15px;
-			padding-left: 20px;
-			padding-right: 20px;
-
-			span{
-				color: #f97015;
-				font-weight: bold;
-			}
-		}
-	}
+.services{
+	background-image: url(images/servicesbg.jpg);
 }
 
-#slide4{
-	padding-top: 20px;
-	@include clearfix;
-	padding-bottom: 40px;
-	background-color: #fff2c3;
+.header-content{
+	
+}
+
+.header-logo{
+	
+}
+
+.header-text{
+	
+}
+
+.header-icon{
+	
+}
+
+.about-special-formatting{
+	
+}
+
+.inner-content{
+	
+}
+
+.icon{
+	
+}
+
+.inner-text{
+	
+}
+
+.edge-item{
+	
+}
+
+.center-item{
+	
+}
+
+.topworkz{
+	
+}
+
+.joint{
+	
+}
+
+.market{
+	
+}
+
+.worktop{
+	
+}
+
+.label{
+	
+}
+
+.kyiv{
+	
+}
+
+#form-messages{
+	display: none;
+}
+
+.contact-form{
+	display: none;
+}
+
+#submit{
+	
+}
+
+.footer{
 
 	p{
-		font-size: 15px;
-	}
-
-	.left2{
-		@include clearfix;
-		float: left;
-		width: 45%;
-		padding-left: 4%;
-		padding-top:40px;
-
-		.available{
-			padding-top:30px;
-			float: left;
-			margin-right: 20px;
-		}
-
-		.sourcebooks{
-			float: left;
-		}
-	}
-
-	.right2{
-		float: right;
-		width: 45%;
-		border-left: 2px dotted #614f46;
-		padding-right: 4%;
-
-		.descr{
-			margin-bottom: 15px;
-		}
-
-		.form{
-			margin-left: 5%;
-
-			.signup{
-				background-color: #e0f1eb;
-				width:100px;
-				height: 35px;
-				font-family: "Signika", Helvetica, serif; 
-				font-weight: 600; 
-				font-size: 15px;
-				color: #614f46;
-				margin-bottom: 5px;
-			}
-		}
+		
 	}
 }
 
-@media only screen and (max-width: 1100px){
-
-	p{
-		font-size: 15px;
-	}
-
-	h1{
-		font-size: 20px;
-	}
 
 
-	#slide1{
-	background-image: url(../images/bg1.jpg);
-	background-size: 100%;
-	background-repeat: no-repeat;
-	background-position: top left;
-	@include clearfix;
-	min-width: 850px;
-
-
-	h2{
-		color: #FFF;
-	}
-
-
-	.thankyou{
-		position: absolute;
-		width:500px;
-		top: 80px;
-		left:50%;
-		margin-left:-250px;
-		text-align: center;
-
-	}
-
-	.ribbon{
-		@include clearfix;
-		margin-top: 300px;
-		margin-bottom: 300px;
-		padding-top: 85px;
-		width: 100%;
-		background-color: #f8b7c1;
-		border-top: 2px solid #614f46;
-		border-bottom: 2px solid #614f46;
-		height: 130px;
-
-		.presents{
-			float: left;
-			margin-left: 6%;
-			width: 40%;
-			text-align: left;
-		}
-
-		.by{
-			float: right;
-			margin-right: 5%;
-			width: 39%;
-			text-align: right;
-			padding-left: 2%;
-		}
-	}
-
-	.logo{
-		position: absolute;
-		width:376px;
-		top: 190px;
-		left:50%;
-		margin-left:-188px;
-
-	}
-
-	.banner{
-		position: absolute;
-		width:600px;
-		height: 140px;
-		bottom: 60px;
-		left:50%;
-		margin-left:-300px;
-		background-image: url(../images/banner.png);
-		background-repeat: no-repeat;
-		background-position: top center;
-		text-align: center;
-		padding-top:75px;
-		padding-bottom:60px;
-	}
+@media (min-width: 300px) {
+	
 }
 
+@media (min-width: 600px) {
+	
+}
+
+@media (min-width: 1200px) {
+	
 }
 
 
