--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,5 +1,4 @@
-@import url(http://fonts.googleapis.com/css?family=Signika:600,700);
-@import url(http://fonts.googleapis.com/css?family=Lora:700);
+@import url(https://fonts.googleapis.com/css?family=Lato:400,300,700);
 
 // Fonts: Lato Bold (h1-h3), Lato Regular (header p), Lato Light (content p),  
 
@@ -14,89 +13,191 @@
 
 // Vars
 $vpadding: 100;
-$hpadding: 100;
+
 $fontsizeL: 48;
 $fontsizeM: 32;
 $fontsizeS: 24;
 $fontsizeP: 16;
 
-// base styles
+$letterspacing: 5;
 
 $darkgray: #3c3c3c;
 $white: #fff;
 
-$font-bold: "Signika", Helvetica, Arial, sans-serif;
-$font-regular: "Signika", Helvetica, Arial, sans-serif;
-$font-light: "Signika", Helvetica, Arial, sans-serif;
+$font: "Lato", Helvetica, Arial, sans-serif;
 
 .animate{
-	-webkit-transition: -webkit-transform 0.4s ease, color 0.4s ease, background-color 0.4s ease, height 0.4s ease;
-	-moz-transition: -moz-transform 0.4s ease, color 0.4s ease, background-color 0.4s ease, height 0.4s ease;
-	-o-transition: -o-transform 0.4s ease, color 0.4s ease, background-color 0.4s ease, height 0.4s ease;
-	transition: transform 0.4s ease, color 0.4s ease, background-color 0.4s ease, height 0.4s ease;
+	-webkit-transition: -webkit-transform 0.4s ease, color 0.4s ease, background-color 0.4s ease, height 0.4s ease, width 0.4s ease, opacity 0.4s ease;
+	-moz-transition: -moz-transform 0.4s ease, color 0.4s ease, background-color 0.4s ease, height 0.4s ease, width 0.4s ease, opacity 0.4s ease;
+	-o-transition: -o-transform 0.4s ease, color 0.4s ease, background-color 0.4s ease, height 0.4s ease, width 0.4s ease, opacity 0.4s ease;
+	transition: transform 0.4s ease, color 0.4s ease, background-color 0.4s ease, height 0.4s ease, width 0.4s ease, opacity 0.4s ease;
 }
 
 body {
+	font-family: $font;
 	color: $darkgray;
 	line-height: 1.5;
 	text-align: center;
+	overflow-x: hidden;
 }
 
 section{
 	width: 100%; 
 	margin: 0 auto;
-	padding: $vpadding 0; 
+	padding: ($vpadding + px) 0; 
 }
 
 h1{
-	font-family: $font-bold;
-	font-size: ($fontsizeL) + px;
-	padding-bottom: 50px; 
+	font-weight: 700; 
+	padding-bottom: 30px; 
 	text-transform: uppercase;
+	letter-spacing: ($letterspacing + 1) + px;
+	line-height: 1;
 }
 
 h2{
-	font-family: $font-bold;
-	font-size: ($fontsizeM) + px;
-	margin-top: (-$fontsizeM / 2) + px; 
+	font-weight: 700; 
+	margin-top: (-$fontsizeM * 0.75) + px; 
+	margin-bottom: 40px;
+	letter-spacing: $letterspacing + px;
 	text-transform: uppercase;
 }
 
 h3{
-	font-family: $font-bold;
+	font-weight: 700;
 	font-size: ($fontsizeS) + px;
 	padding-bottom: 20px; 
+	letter-spacing: ($letterspacing - 2) + px;
 	text-transform: uppercase;
 }
 
 p{
-	font-family: $font-light;
+	font-weight: 300; 
 	font-size: ($fontsizeP) + px;
-	padding-bottom: 20px; 
+	padding-bottom: 15px; 
 }
 
 button{
-	font-family: $font-bold;
+	font-weight: 700; 
 	font-size: ($fontsizeP) + px;
 	padding: 20px; 
 	text-transform: uppercase;
 	background-color: $darkgray;
 	color: $white; 
+	border: none;
+	width: 60%; 
+	letter-spacing: 2px;
+	margin-bottom: 20px;
+	cursor: pointer;
+	
+	&:hover{
+		opacity: 0.7; 
+	}
 }
 
 form{
 
-	font-family: $font-light;
+	font-weight: 300; 
 	font-size: ($fontsizeP) + px;
 	padding-bottom: 20px;
 
 	input{
 		border: none;
+		background-color: $darkgray;
+		color: $white; 
+		padding: 15px; 
+		display: block;
+		width: 85%; 
+		margin: 0 auto;
+		text-align: left;
+		margin-bottom: 15px; 
 	}
 
 	textarea{
 		border: none;
+		background-color: $darkgray;
+		color: $white; 
+		padding: 15px; 
+		width: 85%;
+		display: block;
+		margin: 0 auto;
+		text-align: left;
+		margin-bottom: 15px;
 	}
+}
+
+a{
+	font-weight: 400; 
+	font-size: ($fontsizeP) + px;
+}
+
+.nav{
+	position: fixed;
+	padding: 20px;
+	right: 0;
+	-webkit-transform: translate(0, 0); 
+	-moz-transform: translate(0, 0); 
+	-ms-transform: translate(0, 0); 
+	-o-transform: translate(0, 0); 
+	transform: translate(0, 0);
+}
+
+.main-nav{ 
+	display: block;
+	background-color: $darkgray;
+	padding: 30px 20px 20px 20px; 
+	width: 95%;
+	
+	li{
+		width: 100%;
+
+		a{
+			display: block;
+			width: 100%;
+			padding: 7px;
+			color: $white;
+			text-align: left;
+			text-decoration: none;
+			
+			&:hover{
+				border-bottom: 2px solid $white;
+			}
+		}
+	}
+}
+
+.mobile-menu{
+	@extend %clearfix;
+	display: block;
+	width: 50px;
+	height: 20px;
+	position: fixed;
+	margin: 20px;
+	padding: 5px; 
+	right: 0;
+}
+
+.mobile-icon{
+	display: block;
+	padding: 2px 0;
+	border-radius: 10px;
+	float: right;
+	background-color: $white; 
+}
+
+.mobile-icon-third{
+	margin: 2px 0 0 0;
+	width: 28px;
+}
+
+.mobile-icon-second{
+	margin: 2px 0 2px 0;
+	width: 38px;
+}
+
+.mobile-icon-first{
+	margin: 0 0 2px 0;
+	width: 48px;
 }
 
 .container{
@@ -107,7 +208,8 @@ form{
 	border: 1px solid $darkgray;
 	width: 60%; 
 	margin: 0 auto; 
-    padding: 15px;
+    padding: 0 110px 30px 110px;
+    max-width: 900px; 
 }
 
 .imgbg{
@@ -116,35 +218,23 @@ form{
 	background-size: cover;
 	background-repeat: no-repeat;
 	color: $white;
-	
-	.content{
-	    -webkit-border-image: url(images/content-border-white.jpg) 30 stretch; /* Safari 3.1-5 */
-	    -o-border-image: url(images/content-border-white.jpg) 30 stretch; /* Opera 11-12.1 */
-	    border-image: url(images/content-border-white.jpg) 30 stretch;
-	}
 }
 
 .whitebg{
 	background-color: $white; 
 	color: $darkgray;
-	
-	.content{
-	    -webkit-border-image: url(images/content-border.jpg) 30 stretch; /* Safari 3.1-5 */
-	    -o-border-image: url(images/content-border.jpg) 30 stretch; /* Opera 11-12.1 */
-	    border-image: url(images/content-border.jpg) 30 stretch;
-	}
 }
 
 .header{
-	background-image: url(images/headerbg.jpg);
+	background-image: url(../../images/headerbg.jpg);
+	background-position: top right; 
 }
 
 .services{
-	background-image: url(images/servicesbg.jpg);
+	background-image: url(../../images/servicesbg.jpg);
 }
 
 .header-content{
-	width: 60%; 
 	margin: 0 auto; 
     padding: 15px;
 }
@@ -153,12 +243,16 @@ form{
 	margin: 0 auto;
 	height: 80px;
 	width: 80px;  
+	margin-bottom: 60px;
 }
 
 .header-text{
-	
+	margin-bottom: 130px;
+
 	p{
+		font-weight: 400; 
 		text-transform: uppercase;
+		line-height: 2; 
 	}
 }
 
@@ -175,10 +269,9 @@ form{
 }
 
 .icon{
-	margin: 0 auto;
+	margin: 30px auto 20px auto;
 	width: 90px;
 	height: 90px;  
-	margin-bottom: 20px; 
 }
 
 .inner-text{
@@ -187,6 +280,7 @@ form{
 
 .works{
 	@extend %clearfix;
+	padding: 0;
 }
 
 // 29, .5, 41, .5, 29
@@ -194,38 +288,57 @@ form{
 .edge-item{
 	@extend %clearfix;
 	float: left;
-	width: 29%; 
+	cursor: pointer;
+	
+	h2{
+		display: block;
+		margin: 0;
+		padding: 0;
+		position: relative;
+		margin-top: 90px;
+		margin-left: 10%;
+		text-align: left;
+	} 
 }
 
 .center-item{
 	@extend %clearfix;
 	float: left;
-	width: 41%;
-	margin: 0 0.5%;  
+	cursor: pointer;
+	
+	h2{
+		display: block;
+		margin: 0;
+		padding: 0;
+		position: relative;
+		margin-top: 90px;
+		margin-left: 10%;
+		text-align: left; 
+	} 
 }
 
 .topworkz{
-	background-image: url(images/topworkzbg.jpg);
+	background-image: url(../../images/topworkzbg.jpg);
 }
 
 .joint{
-	background-image: url(images/jointbg.jpg);
+	background-image: url(../../images/jointbg.jpg);
 }
 
 .market{
-	background-image: url(images/marketbg.jpg);
+	background-image: url(../../images/marketbg.jpg);
 }
 
 .worktop{
-	background-image: url(images/worktopbg.jpg);
+	background-image: url(../../images/worktopbg.jpg);
 }
 
 .label{
-	background-image: url(images/labelbg.jpg);
+	background-image: url(../../images/labelbg.jpg);
 }
 
 .kyiv{
-	background-image: url(images/kyivbg.jpg);
+	background-image: url(../../images/kyivbg.jpg);
 }
 
 #form-messages{
@@ -233,46 +346,222 @@ form{
 }
 
 .contact-form{
-	display: none;
+	height: 0;
+	opacity: 0; 
+	width: 100%;  
 }
 
 #submit{
-	font-family: $font-bold;
+	font-weight: 700; 
 	font-size: ($fontsizeP) + px;
 	padding: 20px; 
 	text-transform: uppercase;
+	text-align: center;
 	background-color: $darkgray;
 	color: $white; 
+	border: none;
+	width: 60%; 
+	letter-spacing: 2px;
+	margin-bottom: 20px;
+	cursor: pointer; 
+	
+	&:hover{
+		opacity: 0.7; 
+	}
 }
+
+$footer-logo-height: 50;
 
 .footer-logo{
 	display: inline-block;
-	height: 30px;
-	width: 30px;  
+	height: $footer-logo-height + px;
+	width: $footer-logo-height + px;
+	margin-right: 20px; 
 }
 
 .footer{
+	padding: 0;
+	margin-top: -20px;
 
 	p{
 		display: inline-block;
-		font-size: ($fontsizeP - 6) + px;
+		font-size: ($fontsizeP - 3) + px;
+		margin-top: (-$footer-logo-height / 2); 
 	}
 }
 
 
 
-@media (min-width: 300px) {
-	
+@media (min-width: 320px) {
+
+	h1{
+		font-size: ($fontsizeL - 9) + px;
+	}
+
+	h2{
+		font-size: ($fontsizeM - 3) + px;
+	}
+
+	.imgbg{
+		
+		.content{
+		    -webkit-border-image: none; /* Safari 3.1-5 */
+		    -moz-border-image: none;
+		    -o-border-image: none; /* Opera 11-12.1 */
+		    border-image: none;
+		    border: 2px solid $white;
+		    border-style: solid;
+		    border-top: none;
+		}
+	}
+
+	.whitebg{
+		
+		.content{
+		    -webkit-border-image: none; /* Safari 3.1-5 */
+		    -moz-border-image: none;
+		    -o-border-image: none; /* Opera 11-12.1 */
+		    border-image: none;
+		    border: 2px solid $darkgray;
+		    border-style: solid;
+		    border-top: none;
+		}
+	}
+
+	.content{
+		width: 60%; 
+	    padding: 0 45px 25px 45px;
+	}
+
+	.header-content{
+		width: 90%;
+	}
+
+	.edge-item{
+		width: 100%; 
+		height: 150px;
+		margin: 2px 0;
+	}
+
+	.center-item{
+		width: 100%;
+		margin: 2px 0;  
+		height: 150px;
+	}
 }
 
-@media (min-width: 600px) {
-	
+@media (min-width: 620px) {
+
+	h1{
+		font-size: ($fontsizeL - 3) + px;
+	}
+
+	h2{
+		font-size: ($fontsizeM - 3) + px;
+	}
+
+	.imgbg{
+		
+		.content{
+			border: none;
+		    -webkit-border-image: url(../../images/content-border-white.png) 1 stretch; /* Safari 3.1-5 */
+		    -moz-border-image: url(../../images/content-border-white.png) 1 stretch;
+		    -o-border-image: url(../../images/content-border-white.png) 1 stretch; /* Opera 11-12.1 */
+		    border-image: url(../../images/content-border-white.png) 1 stretch;
+			border-style: solid;
+			    
+		}
+	}
+
+	.whitebg{
+		
+		.content{
+			border: none;
+		    -webkit-border-image: url(../../images/content-border.png) 1 stretch; /* Safari 3.1-5 */
+		    -moz-border-image: url(../../images/content-border.png) 1 stretch;
+		    -o-border-image: url(../../images/content-border.png) 1 stretch; /* Opera 11-12.1 */
+		    border-image: url(../../images/content-border.png) 1 stretch;
+			border-style: solid;
+		}
+	}
+
+	.content{
+		width: 60%; 
+	    padding: 0 110px 30px 110px;
+	}
+
+	.header-content{
+		width: 80%;
+	}
+
+	.edge-item{
+		width: 49%; 
+		height: 150px;
+		margin: 0 0.5% 8px 0.5%;
+	}
+
+	.center-item{
+		width: 49%;
+		margin: 0 0.5% 8px 0.5%;  
+		height: 150px;
+	}
 }
 
-@media (min-width: 1200px) {
-	
-}
+@media (min-width: 920px) {
 
+	h1{
+		font-size: ($fontsizeL) + px;
+	}
+
+	h2{
+		font-size: ($fontsizeM) + px;
+	}
+
+	.imgbg{
+		
+		.content{
+			border: none;
+		    -webkit-border-image: url(../../images/content-border-white.png) 1 stretch; /* Safari 3.1-5 */
+		    -moz-border-image: url(../../images/content-border-white.png) 1 stretch;
+		    -o-border-image: url(../../images/content-border-white.png) 1 stretch; /* Opera 11-12.1 */
+		    border-image: url(../../images/content-border-white.png) 1 stretch;
+			border-style: solid;
+		}
+	}
+
+	.whitebg{
+		
+		.content{
+			border: none;
+		    -webkit-border-image: url(../../images/content-border.png) 1 stretch; /* Safari 3.1-5 */
+		    -moz-border-image: url(../../images/content-border.png) 1 stretch;
+		    -o-border-image: url(../../images/content-border.png) 1 stretch; /* Opera 11-12.1 */
+		    border-image: url(../../images/content-border.png) 1 stretch;
+			border-style: solid;
+		}
+	}
+
+	.content{
+		width: 60%; 
+	    padding: 0 110px 30px 110px;
+	}
+
+	.header-content{
+		width: 60%;
+	}
+
+	.edge-item{
+		width: 29%; 
+		height: 150px;
+		margin: 0 0 8px 0;  
+	}
+
+	.center-item{
+		width: 41%;
+		margin: 0 0.5% 8px 0.5%;  
+		height: 150px;
+	}
+}
 
 
 
