--- a/sass/main.scss
+++ b/sass/main.scss
@@ -392,7 +392,7 @@ $footer-logo-height: 50;
 
 
 
-@media (min-width: 320px) {
+@media only screen and (min-width: 320px) {
 
 	h1{
 		font-size: ($fontsizeL - 9) + px;
@@ -450,7 +450,7 @@ $footer-logo-height: 50;
 	}
 }
 
-@media (min-width: 620px) {
+@media only screen and (min-width: 620px) {
 
 	h1{
 		font-size: ($fontsizeL - 3) + px;
@@ -507,7 +507,7 @@ $footer-logo-height: 50;
 	}
 }
 
-@media (min-width: 920px) {
+@media only screen and (min-width: 920px) {
 
 	h1{
 		font-size: ($fontsizeL) + px;
