--- a/sass/main.scss
+++ b/sass/main.scss
@@ -461,7 +461,8 @@ $footer-logo-height: 50;
 	.imgbg{
 		
 		.content{
-			// border: none;
+			border: none;
+			border-top: none;
 		    -webkit-border-image: url(../../images/content-border-white.png) 1 stretch; /* Safari 3.1-5 */
 		    -moz-border-image: url(../../images/content-border-white.png) 1 stretch;
 		    -o-border-image: url(../../images/content-border-white.png) 1 stretch; /* Opera 11-12.1 */
@@ -474,7 +475,8 @@ $footer-logo-height: 50;
 	.whitebg{
 		
 		.content{
-			// border: none;
+			border: none;
+			border-top: none;
 		    -webkit-border-image: url(../../images/content-border.png) 1 stretch; /* Safari 3.1-5 */
 		    -moz-border-image: url(../../images/content-border.png) 1 stretch;
 		    -o-border-image: url(../../images/content-border.png) 1 stretch; /* Opera 11-12.1 */
@@ -518,7 +520,8 @@ $footer-logo-height: 50;
 	.imgbg{
 		
 		.content{
-			// border: none;
+			border: none;
+			border-top: none;
 		    -webkit-border-image: url(../../images/content-border-white.png) 1 stretch; /* Safari 3.1-5 */
 		    -moz-border-image: url(../../images/content-border-white.png) 1 stretch;
 		    -o-border-image: url(../../images/content-border-white.png) 1 stretch; /* Opera 11-12.1 */
@@ -530,7 +533,8 @@ $footer-logo-height: 50;
 	.whitebg{
 		
 		.content{
-			// border: none;
+			border: none;
+			border-top: none;
 		    -webkit-border-image: url(../../images/content-border.png) 1 stretch; /* Safari 3.1-5 */
 		    -moz-border-image: url(../../images/content-border.png) 1 stretch;
 		    -o-border-image: url(../../images/content-border.png) 1 stretch; /* Opera 11-12.1 */
