--- a/sass/main.scss
+++ b/sass/main.scss
@@ -461,8 +461,7 @@ $footer-logo-height: 50;
 	.imgbg{
 		
 		.content{
-			border: none;
-			border-top: none;
+			// border: none;
 		    -webkit-border-image: url(../../images/content-border-white.png) 1 stretch; /* Safari 3.1-5 */
 		    -moz-border-image: url(../../images/content-border-white.png) 1 stretch;
 		    -o-border-image: url(../../images/content-border-white.png) 1 stretch; /* Opera 11-12.1 */
@@ -475,8 +474,7 @@ $footer-logo-height: 50;
 	.whitebg{
 		
 		.content{
-			border: none;
-			border-top: none;
+			// border: none;
 		    -webkit-border-image: url(../../images/content-border.png) 1 stretch; /* Safari 3.1-5 */
 		    -moz-border-image: url(../../images/content-border.png) 1 stretch;
 		    -o-border-image: url(../../images/content-border.png) 1 stretch; /* Opera 11-12.1 */
@@ -520,8 +518,7 @@ $footer-logo-height: 50;
 	.imgbg{
 		
 		.content{
-			border: none;
-			border-top: none;
+			// border: none;
 		    -webkit-border-image: url(../../images/content-border-white.png) 1 stretch; /* Safari 3.1-5 */
 		    -moz-border-image: url(../../images/content-border-white.png) 1 stretch;
 		    -o-border-image: url(../../images/content-border-white.png) 1 stretch; /* Opera 11-12.1 */
@@ -533,8 +530,7 @@ $footer-logo-height: 50;
 	.whitebg{
 		
 		.content{
-			border: none;
-			border-top: none;
+			// border: none;
 		    -webkit-border-image: url(../../images/content-border.png) 1 stretch; /* Safari 3.1-5 */
 		    -moz-border-image: url(../../images/content-border.png) 1 stretch;
 		    -o-border-image: url(../../images/content-border.png) 1 stretch; /* Opera 11-12.1 */
