--- a/sass/main.scss
+++ b/sass/main.scss
@@ -407,9 +407,9 @@ $footer-logo-height: 50;
 		    -moz-border-image: none;
 		    -o-border-image: none; /* Opera 11-12.1 */
 		    border-image: none;
-		    border: 2px solid $white;
+		    // border: 2px solid $white;
 		    border-style: solid;
-		    border-top: none;
+		    // border-top: none;
 		}
 	}
 
@@ -420,9 +420,9 @@ $footer-logo-height: 50;
 		    -moz-border-image: none;
 		    -o-border-image: none; /* Opera 11-12.1 */
 		    border-image: none;
-		    border: 2px solid $darkgray;
+		    // border: 2px solid $darkgray;
 		    border-style: solid;
-		    border-top: none;
+		    // border-top: none;
 		}
 	}
 
